[package]
name = "poke-engine"
version = "0.1.0"
authors = ["pmariglia <pmariglia@github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }

[features]
remove_low_chance_instructions = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []
gen9 = []

default = ["gen4"]
