[package]
name = "poke-engine"
version = "0.1.0"
authors = ["pmariglia <pmariglia@github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Pokemon battle engine that can be used to search through the state space of a Pokemon battle."

[profile.release]
debug = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.4"
lazy_static = "1.4.0"

[features]
remove_low_chance_instructions = []
last_used_move = []
damage_dealt = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []
gen9 = []

default = ["gen4"]
