[package]
name = "poke-engine"
version = "0.0.25"
authors = ["pmariglia <pmariglia@github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Pokemon battle engine that can be used to search through the state space of a Pokemon battle."

[lib]
name = "poke_engine"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "poke-engine"
path = "src/main.rs"

[profile.release]
debug = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.4"
lazy_static = "1.4.0"

[features]
remove_low_chance_instructions = []
gen1 = []
gen2 = []
gen3 = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []
gen9 = []
terastallization = ["gen9"]

default = []

[workspace]
members = [
    "poke-engine-py"
]
